--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,21 @@
 <body>
     <div class="tm-page-container mx-auto">
         <header class="tm-header text-center">
-            <h1 class="tm-title text-uppercase">Verticard</h1>
-            <p class="tm-primary-color"><i>new bootstrap theme</i></p>
+            <h1 class="tm-title text-uppercase">MinIndex</h1>
+            <p class="tm-primary-color"><i>微指数软件</i></p>
         </header>
 
         <section class="tm-section">
             <nav class="tm-nav">
                 <ul>
                     <li>
-                        <a href="index.html"><span class="tm-nav-deco"></span>Intro</a>
+                        <a href="index.html"><span class="tm-nav-deco"></span>关于我们</a>
                     </li>
                     <li>
-                        <a href="gallery.html"><span class="tm-nav-deco"></span>Gallery</a>
+                        <a href="gallery.html"><span class="tm-nav-deco"></span>软件下载</a>
                     </li>
                     <li class="active">
-                        <a href="contact.html"><span class="tm-nav-deco"></span>Contact</a>
+                        <a href="contact.html"><span class="tm-nav-deco"></span>联系我们</a>
                     </li>
                 </ul>
             </nav>
