--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
   <div class="tm-page-container mx-auto">
     <header class="tm-header text-center">
       <h1 class="tm-title text-uppercase">MinIndex</h1>
-      <p class="tm-primary-color"><i>0.90</i></p>
+      <p class="tm-primary-color"><i>微指数软件</i></p>
     </header>
 
     <section class="tm-section">
       <nav class="tm-nav">
         <ul>
           <li class="active">
-            <a href="index.html"><span class="tm-nav-deco"></span>Intro</a>
+            <a href="index.html"><span class="tm-nav-deco"></span>关于我们</a>
           </li>
           <li>
-            <a href="gallery.html"><span class="tm-nav-deco"></span>Gallery</a>
+            <a href="gallery.html"><span class="tm-nav-deco"></span>软件下载</a>
           </li>
           <li>
-            <a href="contact.html"><span class="tm-nav-deco"></span>Contact</a>
+            <a href="contact.html"><span class="tm-nav-deco"></span>联系我们</a>
           </li>
         </ul>
       </nav>
@@ -38,14 +38,10 @@
           <img src="img/img-1.jpg" alt="Image" class="img-fluid tm-img" />
         </figure>
         <div class="tm-content">
-          <h2 class="tm-page-title">Verticard Simple CSS Template</h2>
-          <p class="mb-4">
-            Curabitur ac est dapibus, ultricies diam non, vestibulum odio. Sed
-            ac nunc lacinia, maximus nisi non, efficitur lacus, Donec efficitur
-            at dui non molestie.
+          <h2 class="tm-page-title">关于我们</h2>
+          <p class="mb-4">         汕头市澄海一元科技有限公司（以下简称“一元”），总部坐落于风景秀丽的汕头澄海区。一元作为智慧投资信息化整体解决方案开发商，我们提供软一体化的智慧投资方式，致力于打造以证券为核心的智慧投资方式。
           </p>
-          <p>
-            Verticard is provided by TemplateMo site for 100% free download. You can use it absolutely free for any website. Template re-distribution is NOT allowed on any kind of download website. Thank you.
+          <p>      目前，一元共有员工200多名，其中40%为专业技术人员，20%为投资研究人员，现已构建研发、生产、咨询、营销、服务一体化体系，设立了涵盖全国31个省、市、自治区的办事处，为用户提供专业的信息化投资咨询和售后服务。同时，一元亮相多个国内大型展会活动，获得多家权威媒体的关注和报道。
           </p>
         </div>
       </div>
