--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,9 @@
                 <div class="mb-0 tm-img-overlay-wrap">
                     <div class="tm-img-overlay"></div>
                     <div class="tm-img-overlay-text text-white p-5">
-                        <h4 class="mb-4">Contact Text on Image</h4>
+                        <h4 class="mb-4">Contact Us</h4>
                         <p class="tm-small">
-                            Text on image has a CSS semi-transparent BG layer on image.
-                            Praesent ut metus nibh. Vivamus diam purus, finibus et porttitor
-                            quis, tristique ac velit. Etiam sed nunc eget lacus sagittis
-                            hendrerit at ullamcorper nulla.
+							欢迎留言反馈,感谢！
                         </p>
                     </div>
                 </div>
@@ -76,8 +73,7 @@
         </section>
 
         <footer>
-            <span>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
-            <span>designed by TemplateMo</span>
+            <span>© 2006 - 2019 YiYuan Inc. All Rights Reserved!</span>
         </footer>
     </div>
 </body>
