--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
         </div>
       </div>
     </section>
-
-    <footer>
-      <span>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
+    <footer >
+      <span>© 2006 - 2019 YiYuan Inc. All Rights Reserved!</span>
       <span></span>
     </footer>
   </div>
