--- a/gallery.html
+++ b/gallery.html
@@ -38,81 +38,29 @@
       <div class="tm-content-container">
         <div class="tm-content tm-content-2">
           <p>
-            This gallery contains a beautiful hover effect and pop-up larger
-            images. Please mention TemplateMo site to your friends.
+			微指数软件当前版本0.90，请点击下方链接下载：
           </p>
-
+		  
+		  
+		  <a src="img/gallery/gallery-img-01.jpg" target="_blank" href="https://raw.githubusercontent.com/hshia/MinIndex/master/upadte/MinIndex.7z">点击下载</a>
+<!-- 
           <div class="container-fluid">
             <div class="row tm-gallery" id="tmGallery">
               <div class="col-sm-6 tm-gallery-item">
                 <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-01.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-01.jpg">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-sm-6 tm-gallery-item">
-                <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-02.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-02.jpg">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-sm-6 tm-gallery-item">
-                <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-03.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-03.jpg">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-sm-6 tm-gallery-item">
-                <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-04.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-04.jpg">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-sm-6 tm-gallery-item">
-                <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-05.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-05.jpg">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-sm-6 tm-gallery-item">
-                <figure class="effect-bubba">
-                  <img src="img/gallery/gallery-img-06.jpg" alt="Gallery item" class="img-fluid" />
-                  <figcaption>
-                    <h2>Fresh <span>Bubba</span></h2>
-                    <p>Bubba likes to appear out of thin air.</p>
-                    <a href="img/gallery/gallery-img-06.jpg">View more</a>
-                  </figcaption>
+                     <img src="img/gallery/gallery-img-01.jpg" alt="Gallery item" class="img-fluid" />  
+				 <a src="img/gallery/gallery-img-01.jpg" target="_blank" href="https://raw.githubusercontent.com/hshia/MinIndex/master/upadte/MinIndex.7z">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
                 </figure>
               </div>
             </div>
           </div>
+-->		  
         </div>
       </div>
     </div>
 
     <footer>
-      <span>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
-      <span>designed by TemplateMo</span>
+      <span>© 2006 - 2019 YiYuan Inc. All Rights Reserved!</span>
     </footer>
   </div>
 
